--- a/Homework/Introcl_homework_2_espie.ipynb
+++ b/Homework/Introcl_homework_2_espie.ipynb
@@ -399,7 +399,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<s> MEDEA . </s> couldst thou see your state law was a great debt for the rites over sundering seas , Yet I not to her , to shield in paragraph 1.E below ; a _dea ex machinâ_ . </s> innumerable to save her for the drama is a woman ; and evil men rejoice . </s> landless women block our fingers Could wake and he hath a bride to find some other gods as a break their giving : and donations can not possible in Norse sagas , May break must go so . </s> , How can not "
+      "the children ; not agree to work , not that now I ! </s> a written , out friendless else ? </s> , 'fore God 's face._ LEADER . </s> the downtrodden , that over sundering seas : She bore ! </s> , once but exiles , And what thing should come and the hurts me rather than other party distributing this point of iron ! </s> that these efforts , To have been with any work associated with the originator of the dust . all , I think , That gentle and ends with death . </s> a cloudy "
      ]
     }
    ],
@@ -437,7 +437,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the high Sun , Sire of my pains ! would kill me ? , Ye be not , And many a maid In Hellas , now ! <s> <s> Jason doth forsake My mistress in her eye , as some old pilot goes Furled to his daughter 's room , where Hera by the fire not stab my brain ? Thy marriage drive Medea from his land , and They that walk in blood . she gathers them passionately into her arms._ Oh , 't was thy father to unmake His doom of exile on them -- for thy sake , Then sword in hand , And dread her ! shaft of riven pine in Pêlion 's glen Shaped that first oar-blade in the acres of corn . Why hast thou Of children be fulfilled of God . . An eastern dreamer ; one Of brand not theirs ; one Of brand not theirs ; one Of brand not theirs ; one Of brand not theirs ; one hard to play upon . . call Thy curse on these ? "
+      ". , Swift to his : till , wild words ! -- to wed a queen , and best , for ill or well , and learned but now have reached mine ear . . JASON. . . Now thy speech provokes not me . , once twine Mine arms and touch. . . . Thou know'st the way ; And God hath heard . <s> Now God in heaven be witness , all the world . None of these things shall be shrivelled as with meat : In craft and darkness I will make of thee I have strayed out so deep in evil dreams , I , being done , Will he bear thee on his knee he writhed ; but , questioned , thou hast granted , yea , woman ; get thee gone And lead lord Jason hither . . Go ! needest , speak thy bidding . <s> Would I could die in my house . joy , Medea , forth to banishment . "
      ]
     }
    ],
