--- a/In-Class Jupyter Notebooks/n-gram language models with NLTK.ipynb
+++ b/In-Class Jupyter Notebooks/n-gram language models with NLTK.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "b34209a4",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "f6782962",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "719abea8",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "988a7ad0",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "FreqDist({'am': 2, 'do': 1})"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "e8ac780e",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        "0.6666666666666666"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "4559a907",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "3f754644",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "dda24414",
    "metadata": {},
    "outputs": [
@@ -314,8 +314,8 @@
       "the words are: ['am', 'do']\n",
       "with matching probabilities [0.6666666666666666, 0.3333333333333333]\n",
       "Note that they sum up to one.\n",
-      "raw output of rvs: [0 1]\n",
-      "we got this word: do\n"
+      "raw output of rvs: [1 0]\n",
+      "we got this word: am\n"
      ]
     }
    ],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "a66beaaf",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "am do am do do am am am am do am am am am do do am am am am "
+      "am am am am am do do do do do am am am am am do do am am am "
      ]
     }
    ],
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "86086f1b",
    "metadata": {},
    "outputs": [
@@ -399,9 +399,9 @@
      "output_type": "stream",
      "text": [
       "I just rolled one die. Here is what I got.\n",
-      "Here is what the result looks like out of the box: [0 0 0 0 0 1]\n",
+      "Here is what the result looks like out of the box: [0 0 1 0 0 0]\n",
       "And here is how we can interpret this:\n",
-      "I rolled a 6\n"
+      "I rolled a 3\n"
      ]
     }
    ],
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "ea226514",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<s> Sam I am Sam . </s> <s> I am . </s> <s> I do not like green eggs and ham . </s> <s> I do not like green eggs and ham . </s> <s> Sam I am . </s> <s> I am Sam . </s> <s> I do not like "
+      "<s> I do not like green eggs and ham . </s> <s> I do not like green eggs and ham . </s> <s> I am Sam I do not like green eggs and ham . </s> <s> Sam . </s> <s> Sam . </s> <s> Sam I am . </s> <s> "
      ]
     }
    ],
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b1bff037",
    "metadata": {},
    "outputs": [],
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "bb32da2e",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
        "[('I',), ('I', 'am'), ('am',), ('am', 'Sam'), ('Sam',), ('Sam', '.'), ('.',)]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "2c43357e",
    "metadata": {},
    "outputs": [
@@ -547,7 +547,7 @@
        "['<s>', 'I', 'am', 'Sam', '.', '</s>']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "id": "4d734570",
    "metadata": {},
    "outputs": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "id": "ae3e5988",
    "metadata": {},
    "outputs": [],
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "id": "d6183088",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ". </s> . </s> and ham . </s> Sam I am Sam I do not like green eggs and ham . </s> and ham . </s> I am . </s> . </s> . </s> do not like green eggs and ham . </s> <s> I do not like green eggs "
+      "</s> Sam . </s> . </s> . </s> <s> Sam . </s> am Sam I do not like green eggs and ham . </s> do not like green eggs and ham . </s> <s> Sam I do not like green eggs and ham . </s> green eggs and ham . "
      ]
     }
    ],
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "id": "49dc7f0d",
    "metadata": {},
    "outputs": [
@@ -662,7 +662,7 @@
        "0.6666666666666666"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "id": "88a25dfe",
    "metadata": {},
    "outputs": [
@@ -691,7 +691,7 @@
        "0.08695652173913043"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "id": "760dafad",
    "metadata": {},
    "outputs": [],
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "id": "f7b7791c",
    "metadata": {},
    "outputs": [],
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "id": "5ce7d9c4",
    "metadata": {},
    "outputs": [
@@ -758,7 +758,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "some of me giddy. ” said in it had to herself lying on this business ? ” At this electronic works to talk , and read that have imitated somebody else ’ d better now—but I try to be used to it : “ And the dance ? </s> It "
+      "” said Alice could not uniform and feebly stretching out altogether , would be no use of sticks and washing ? ” said the Gryphon in it might not possibly make out in a little , it , as hard as she did not protected by wild beast , and "
      ]
     }
    ],
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "id": "d3264126",
    "metadata": {},
    "outputs": [],
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
    "id": "6429c778",
    "metadata": {},
    "outputs": [
@@ -795,7 +795,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<s> <s> Our family always _hated_ cats : nasty , low hall , and tried to curtsey as she listened , or courtiers , or the exclusion or limitation set forth in paragraphs 1.E.8 or 1.E.9 . </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> "
+      "“ Are their heads . </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> "
      ]
     }
    ],
