--- a/In-Class Jupyter Notebooks/Python functions.ipynb
+++ b/In-Class Jupyter Notebooks/Python functions.ipynb
@@ -1243,10 +1243,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>line</th>\n",
+       "      <th>tokenized</th>\n",
+       "      <th>preprocessed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>How doth the little crocodile</td>\n",
+       "      <td>[How, doth, the, little, crocodile]</td>\n",
+       "      <td>[doth, little, crocodile]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Improve his shining tail</td>\n",
+       "      <td>[Improve, his, shining, tail]</td>\n",
+       "      <td>[improve, shining, tail]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>And pour the waters of the Nile</td>\n",
+       "      <td>[And, pour, the, waters, of, the, Nile]</td>\n",
+       "      <td>[pour, waters, nile]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>On every golden scale!</td>\n",
+       "      <td>[On, every, golden, scale, !]</td>\n",
+       "      <td>[every, golden, scale]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>How cheerfully he seems to grin</td>\n",
+       "      <td>[How, cheerfully, he, seems, to, grin]</td>\n",
+       "      <td>[cheerfully, seems, grin]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>How neatly spreads his claws,</td>\n",
+       "      <td>[How, neatly, spreads, his, claws, ,]</td>\n",
+       "      <td>[neatly, spreads, claws]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>And welcomes little fishes in</td>\n",
+       "      <td>[And, welcomes, little, fishes, in]</td>\n",
+       "      <td>[welcomes, little, fishes]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>With gently smiling jaws</td>\n",
+       "      <td>[With, gently, smiling, jaws]</td>\n",
+       "      <td>[gently, smiling, jaws]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              line                                tokenized  \\\n",
+       "0    How doth the little crocodile      [How, doth, the, little, crocodile]   \n",
+       "1         Improve his shining tail            [Improve, his, shining, tail]   \n",
+       "2  And pour the waters of the Nile  [And, pour, the, waters, of, the, Nile]   \n",
+       "3           On every golden scale!            [On, every, golden, scale, !]   \n",
+       "4  How cheerfully he seems to grin   [How, cheerfully, he, seems, to, grin]   \n",
+       "5    How neatly spreads his claws,    [How, neatly, spreads, his, claws, ,]   \n",
+       "6    And welcomes little fishes in      [And, welcomes, little, fishes, in]   \n",
+       "7         With gently smiling jaws            [With, gently, smiling, jaws]   \n",
+       "\n",
+       "                 preprocessed  \n",
+       "0   [doth, little, crocodile]  \n",
+       "1    [improve, shining, tail]  \n",
+       "2        [pour, waters, nile]  \n",
+       "3      [every, golden, scale]  \n",
+       "4   [cheerfully, seems, grin]  \n",
+       "5    [neatly, spreads, claws]  \n",
+       "6  [welcomes, little, fishes]  \n",
+       "7     [gently, smiling, jaws]  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "from string import punctuation as punc\n",
+    "\n",
+    "stopwords = nltk.corpus.stopwords.words(\"english\")\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "mydf = pd.DataFrame( {\"line\" : [\"How doth the little crocodile\",\n",
+    "                                \"Improve his shining tail\", \n",
+    "                                \"And pour the waters of the Nile\",\n",
+    "                                \"On every golden scale!\",\n",
+    "                                \"How cheerfully he seems to grin\",\n",
+    "                                \"How neatly spreads his claws,\",\n",
+    "                                \"And welcomes little fishes in\",\n",
+    "                                \"With gently smiling jaws\"]})\n",
+    "\n",
+    "mydf\n",
+    "\n",
+    "def my_preprocess(line):\n",
+    "    words = nltk.word_tokenize(line)\n",
+    "    words1 = [w.lower() for w in words]\n",
+    "    words2 = [w for w in words1 if w not in stopwords]\n",
+    "    words3 = [w for w in words2 if w.strip(punc) != \"\"]\n",
+    "    return words3\n",
+    "\n",
+    "mydf[\"tokenized\"] = [nltk.word_tokenize(s) for s in mydf.line]\n",
+    "mydf[\"preprocessed\"] = [my_preprocess(line) for line in mydf.line]\n",
+    "mydf"
+   ]
   }
  ],
  "metadata": {
