--- a/In-Class Jupyter Notebooks/Python functions.ipynb
+++ b/In-Class Jupyter Notebooks/Python functions.ipynb
@@ -654,7 +654,7 @@
     {
      "data": {
       "text/plain": [
-       "['123', '3.4', '67.9']"
+       "[123.0, 3.4, 67.9]"
       ]
      },
      "execution_count": 27,
@@ -665,8 +665,8 @@
    "source": [
     "import re\n",
     "\n",
-    "def weird_function(string):\n",
-    "    lst1 = string.split()\n",
+    "def str_func(input):\n",
+    "    lst1 = input.split()\n",
     "    \n",
     "    for word in lst1:\n",
     "        if re.search(r\"^https\", word):\n",
@@ -674,7 +674,18 @@
     "    \n",
     "    return lst1\n",
     "\n",
-    "weird_function(\"123 3.4  67.9\")"
+    "def int_func(input):\n",
+    "    lst1 = input.split()\n",
+    "\n",
+    "    lst2 = []\n",
+    "\n",
+    "    for item in lst1:\n",
+    "        lst2.append(float(item))\n",
+    "\n",
+    "    return lst2\n",
+    "\n",
+    "\n",
+    "int_func(\"123 3.4  67.9\")"
    ]
   },
   {
@@ -829,13 +840,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -852,7 +856,7 @@
     "# error: SyntaxError: non-default argument follows default argument\n",
     "\n",
     "# def repeat_string_withbug(numtimes = 5, somestring):\n",
-    "#      return somestring * numtimes"
+    "    # return somestring * numtimes"
    ]
   },
   {
@@ -1243,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1351,7 @@
        "7     [gently, smiling, jaws]  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
