--- a/In-Class Jupyter Notebooks/Sorting in Python.ipynb
+++ b/In-Class Jupyter Notebooks/Sorting in Python.ipynb
@@ -172,8 +172,8 @@
    "outputs": [],
    "source": [
     "# This function takes a pair of two values, and returns the second\n",
-    "def second_of_pair(tuple):\n",
-    "    return tuple[1]"
+    "def second_of_pair(tple):\n",
+    "    return tple[1]"
    ]
   },
   {
