--- a/Homework/Introcl_homework_2.ipynb
+++ b/Homework/Introcl_homework_2.ipynb
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1708,7 +1708,7 @@
        " ...}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1725,9 +1725,7 @@
     "cfd_ambg = {}\n",
     "\n",
     "#iterates through each word in brown_news\n",
-    "for tuple in brown_news:\n",
-    "    word = tuple[0]\n",
-    "\n",
+    "for word in cfd.conditions():\n",
     "    #len of cfd objects seem to be based on the number of POS assignments, so I used that\n",
     "    #to determine if a word was ambiguous\n",
     "    if len(cfd[word]) > 1:\n",
