--- a/Homework/Introcl_homework_2_espie.ipynb
+++ b/Homework/Introcl_homework_2_espie.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        " 'there']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -392,14 +392,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the children ; not agree to work , not that now I ! </s> a written , out friendless else ? </s> , 'fore God 's face._ LEADER . </s> the downtrodden , that over sundering seas : She bore ! </s> , once but exiles , And what thing should come and the hurts me rather than other party distributing this point of iron ! </s> that these efforts , To have been with any work associated with the originator of the dust . all , I think , That gentle and ends with death . </s> a cloudy "
+      "me . </s> but to despair , to the emergence of hidden that man talking , as the lines ( 1 ) </s> 2 ) , would naturally want not by killing her dear . </s> <s> Such iron ! </s> , the dart That lingering cry turned . </s> . </s> ; quick went forward , If you prepare us were two Children as mother slew for copies of God above the form of thy trampling pride no cost and Medea_ . </s> the hands , 949 , and the left me out the qualities that - You must "
      ]
     }
    ],
@@ -430,14 +430,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ". , Swift to his : till , wild words ! -- to wed a queen , and best , for ill or well , and learned but now have reached mine ear . . JASON. . . Now thy speech provokes not me . , once twine Mine arms and touch. . . . Thou know'st the way ; And God hath heard . <s> Now God in heaven be witness , all the world . None of these things shall be shrivelled as with meat : In craft and darkness I will make of thee I have strayed out so deep in evil dreams , I , being done , Will he bear thee on his knee he writhed ; but , questioned , thou hast granted , yea , woman ; get thee gone And lead lord Jason hither . . Go ! needest , speak thy bidding . <s> Would I could die in my house . joy , Medea , forth to banishment . "
+      "be , such a bride Shall wait thee , dream not that I may hear ? your father 's home , And faint at need , and all her face dead pale for lack Of life : nor fled in fear , Hunted for that the less I trust thee now ! , they will laugh loud who hate me. . . CREON . The cup of all this land . being parted from her children . . . . . . so much their learning brings ! the children_ . . Medea ? and a carcanet of gold More sweet than ever rang from Orpheus old , Unless our deeds have glory ? the hand knows what it dares , When the harvest cometh , between wake and sleep ? in the nearer House that was born in vain I bore you , and choose a wiser part ? "
      ]
     }
    ],
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
        " ('of', 'IN')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
        "'AT'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
        "'the'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
        "<ConditionalFreqDist with 3 conditions>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +782,7 @@
        "['a', 'b', 'c']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
        "FreqDist({'X': 1, 'Y': 1})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1861,7 +1861,7 @@
        " ...}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
