--- a/Homework/Introcl_homework_3.ipynb
+++ b/Homework/Introcl_homework_3.ipynb
@@ -79,7 +79,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*(click here to insert for your text answer here)*"
+    "*(click here to insert for your text answer here)*\n",
+    "\n",
+    "# *CHECK*\n",
+    "\n",
+    "$P(START\\:My\\:iguana\\:is\\:on\\:fire\\:END) \\approx P(my | \\_, START) \\cdot P(iguana|START, my) \\cdot P(is| my, iguana) \\cdot P(on |iguana, is) \\cdot P(fire| is,on) \\cdot P(END | on, fire)$"
    ]
   },
   {
@@ -97,6 +101,7 @@
     "\n",
     "$P(fire|is, on)$\n",
     "\n",
+    "\n",
     "?\n"
    ]
   },
@@ -104,7 +109,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*(Click here to insert your text answer.)*"
+    "*(Click here to insert your text answer.)*\n",
+    "\n",
+    "# CHECK\n",
+    "\n",
+    "$P(fire |is, on) = \\frac{count(is, on, fire)}{count(is, on)}$"
    ]
   },
   {
@@ -140,7 +149,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*(Click here to insert your text answer)*"
+    "*(Click here to insert your text answer)*\n",
+    "\n",
+    "1 is B\n",
+    "\n",
+    "2 is A\n",
+    "\n",
+    "3 is C"
    ]
   },
   {
@@ -225,7 +240,7 @@
     "# that the code does the right thing\n",
     "for word1 in count :\n",
     "    for word2 in count[ word1 ]:\n",
-    "        print(word1, word2, count[word1][word2])"
+    "        print(word1, word2, count[word1][word2])\n"
    ]
   },
   {
@@ -243,11 +258,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'START': {'I': '67%', 'Sam': '33%'},\n",
+       " 'I': {'am': '67%', 'do': '33%'},\n",
+       " 'am': {'Sam': '50%', 'END': '50%'},\n",
+       " 'Sam': {'END': '50%', 'I': '50%'},\n",
+       " 'END': {'START': '100%'},\n",
+       " 'do': {'not': '100%'},\n",
+       " 'not': {'like': '100%'},\n",
+       " 'like': {'green': '100%'},\n",
+       " 'green': {'eggs': '100%'},\n",
+       " 'eggs': {'and': '100%'},\n",
+       " 'and': {'ham': '100%'},\n",
+       " 'ham': {'END': '100%'}}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# place your code here"
+    "# place your code here\n",
+    "\n",
+    "#probability that am will be followed by sam = \n",
+    "# P(Sam|am) =\n",
+    "#count(am, Sam)/count(am, _)\n",
+    "#the count of how many times \"am Sam\" has occured divided by the number of of pairs starting in am\n",
+    "\n",
+    "# create a dict to show probability of bigram occurences\n",
+    "prob_dict = {}\n",
+    "\n",
+    "# loop through the first layer of the count dict\n",
+    "for keys1, values in count.items():\n",
+    "    # loop through the second layer, the dictionary within the keys of the count dict\n",
+    "    for key, value in values.items():\n",
+    "        # each key in count is unique so we don't need to check if they're already in the dictionary\n",
+    "        # the formula here is a comprehension\n",
+    "        # key = (count(first layer key, second layer key)/count(sum of occurences starting in first layer key))\n",
+    "        prob_dict[keys1] = {key: (\"{:.0%}\".format((count[keys1][key]/sum([num for num in count[keys1].values()])))) for key in values}\n",
+    "\n",
+    "prob_dict"
    ]
   },
   {
@@ -291,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,18 +402,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "NearestNeighbors(metric='cityblock', n_neighbors=2)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/eloraghespie/Documents/GitHub/LING_353c_COMP_LING/Homework/Introcl_homework_3.ipynb Cell 18\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/eloraghespie/Documents/GitHub/LING_353c_COMP_LING/Homework/Introcl_homework_3.ipynb#X22sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mneighbors\u001b[39;00m \u001b[39mimport\u001b[39;00m NearestNeighbors\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eloraghespie/Documents/GitHub/LING_353c_COMP_LING/Homework/Introcl_homework_3.ipynb#X22sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# three datapoints.\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eloraghespie/Documents/GitHub/LING_353c_COMP_LING/Homework/Introcl_homework_3.ipynb#X22sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# datapoint1: has feature1 but not feature2, feature3\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eloraghespie/Documents/GitHub/LING_353c_COMP_LING/Homework/Introcl_homework_3.ipynb#X22sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m datapoint1 \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m]\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
     }
    ],
    "source": [
@@ -386,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
