--- a/Homework/Introcl_homework_3.ipynb
+++ b/Homework/Introcl_homework_3.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "# *CHECK*\n",
     "\n",
-    "$P(START\\:My\\:iguana\\:is\\:on\\:fire\\:END) \\approx P(my | \\_, START) \\cdot P(iguana|START, my) \\cdot P(is| my, iguana) \\cdot P(on |iguana, is) \\cdot P(fire| is,on) \\cdot P(END | on, fire)$"
+    "$P(START\\:My\\:iguana\\:is\\:on\\:fire\\:END) \\approx P(my | START ,\\_) \\cdot P(iguana|my ,START) \\cdot P(is| iguana, my) \\cdot P(on |is ,iguana) \\cdot P(fire| on, is) \\cdot P(END | fire, on)$"
    ]
   },
   {
@@ -342,11 +342,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'START': {'I': '20.000%', 'Sam': '13.333%'},\n",
+       " 'I': {'am': '20.000%', 'do': '13.333%'},\n",
+       " 'am': {'Sam': '14.286%', 'END': '14.286%'},\n",
+       " 'Sam': {'END': '14.286%', 'I': '14.286%'},\n",
+       " 'END': {'START': '21.429%'},\n",
+       " 'do': {'not': '15.385%'},\n",
+       " 'not': {'like': '15.385%'},\n",
+       " 'like': {'green': '15.385%'},\n",
+       " 'green': {'eggs': '15.385%'},\n",
+       " 'eggs': {'and': '15.385%'},\n",
+       " 'and': {'ham': '15.385%'},\n",
+       " 'ham': {'END': '15.385%'}}"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# put your code here"
+    "# put your code here\n",
+    "\n",
+    "vocab_list = []\n",
+    "\n",
+    "vocab_count = 0\n",
+    "\n",
+    "for word in words:\n",
+    "    if word not in vocab_list:\n",
+    "        vocab_list.append(word)\n",
+    "        vocab_count += 1\n",
+    "        \n",
+    "prob_s = {}\n",
+    "\n",
+    "# loop through the first layer of the count dict\n",
+    "for keys1, values in count.items():\n",
+    "    # loop through the second layer, the dictionary within the keys of the count dict\n",
+    "    for key, value in values.items():\n",
+    "        # each key in count is unique so we don't need to check if they're already in the dictionary\n",
+    "        # the formula here is a comprehension\n",
+    "        # key = (count(first layer key, second layer key)/count(sum of occurences starting in first layer key))\n",
+    "        prob_s[keys1] = {key: \"{:.3%}\".format((count[keys1][key] + 1)/(sum([num for num in count[keys1].values()]) + vocab_count)) for key in values}\n",
+    "\n",
+    "prob_s"
    ]
   },
   {
@@ -381,7 +425,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*space for your text answer*"
+    "*space for your text answer*\n",
+    "\n",
+    "Doc1: Doc4 and Doc6 both have two keys in common with Doc1 so they're it's nearest neighbors. \n",
+    "\n",
+    "Doc2: Doc5 and Doc6 both have one key in common with Doc2 so they're it's nearest neighbors.\n",
+    "\n",
+    "Doc3: Doc1, Doc2, Doc4, Doc5, and Doc6 each had one key in common with Doc3 so they're it's nearest neighbors."
    ]
   },
   {
@@ -402,9 +452,6 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>NearestNeighbors(metric=&#x27;cityblock&#x27;, n_neighbors=2)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">NearestNeighbors</label><div class=\"sk-toggleable__content\"><pre>NearestNeighbors(metric=&#x27;cityblock&#x27;, n_neighbors=2)</pre></div></div></div></div></div>"
-      ],
       "text/plain": [
        "NearestNeighbors(metric='cityblock', n_neighbors=2)"
       ]
@@ -509,11 +556,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0],\n",
+       " [1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0],\n",
+       " [0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1],\n",
+       " [0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0]]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# space for your code here"
+    "# space for your code here\n",
+    "\n",
+    "doc_dict = {1: [\"baseball\", \"startups\", \"college\", \"soccer\"], 2: [\"opera\", \"training\", \"opera\", \"training\"], 3: [\"soccer\", \"tech\", \"AI\", \"robots\"], 4: [\"sculpture\", \"college\", \"AI\", \"baseball\"], 5: [\"AI\", \"exhibition\", \"college\", \"opera\"], 6: [\"startups\", \"training\", \"sculpture\", \"college\"]}\n",
+    "\n",
+    "docs = []\n",
+    "\n",
+    "keywords = []\n",
+    "\n",
+    "for key, values in doc_dict.items():\n",
+    "    if key not in docs:\n",
+    "        docs.append(key)\n",
+    "    \n",
+    "    for val in values:\n",
+    "        if val not in keywords:\n",
+    "            keywords.append(val)\n",
+    "\n",
+    "dict = {key: [] for key in docs}\n",
+    "\n",
+    "for i in range(1, 7):\n",
+    "    for val in keywords:\n",
+    "        if val in doc_dict[i]:\n",
+    "            dict[i].append(1)\n",
+    "        else:\n",
+    "            dict[i].append(0)\n",
+    "\n",
+    "data = [value for value in dict.values()]\n",
+    "\n",
+    "data"
    ]
   },
   {
@@ -526,11 +616,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For Doc 1 Nearest datapoint is Doc no. 1 at distance 0.0 (which is that same datapoint)\n",
+      "Second nearest datapoint is Doc no. 4 at distance 4.0\n",
+      "\n",
+      "\n",
+      "For Doc 2 Nearest datapoint is Doc no. 2 at distance 0.0 (which is that same datapoint)\n",
+      "Second nearest datapoint is Doc no. 5 at distance 4.0\n",
+      "\n",
+      "\n",
+      "For Doc 3 Nearest datapoint is Doc no. 3 at distance 0.0 (which is that same datapoint)\n",
+      "Second nearest datapoint is Doc no. 1 at distance 6.0\n",
+      "\n",
+      "\n",
+      "For Doc 4 Nearest datapoint is Doc no. 4 at distance 0.0 (which is that same datapoint)\n",
+      "Second nearest datapoint is Doc no. 1 at distance 4.0\n",
+      "\n",
+      "\n",
+      "For Doc 5 Nearest datapoint is Doc no. 5 at distance 0.0 (which is that same datapoint)\n",
+      "Second nearest datapoint is Doc no. 2 at distance 4.0\n",
+      "\n",
+      "\n",
+      "For Doc 6 Nearest datapoint is Doc no. 6 at distance 0.0 (which is that same datapoint)\n",
+      "Second nearest datapoint is Doc no. 1 at distance 4.0\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# space for your code here. "
+    "# space for your code here.\n",
+    "\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "\n",
+    "neighbor_obj = NearestNeighbors(n_neighbors=2, metric='cityblock')\n",
+    "neighbor_obj.fit(data)\n",
+    "\n",
+    "for i in range(len(docs)):\n",
+    "    \n",
+    "    distances, neighbors = neighbor_obj.kneighbors(data)\n",
+    "\n",
+    "    print(\"For Doc {} Nearest datapoint is Doc no.\".format(i + 1), (neighbors[i][0] + 1), \"at distance\", distances[i][0], \"(which is that same datapoint)\")\n",
+    "    print(\"Second nearest datapoint is Doc no.\", (neighbors[i][1] + 1), \"at distance\", distances[i][1])\n",
+    "    print(\"\\n\")\n"
    ]
   },
   {
@@ -542,17 +676,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For Doc 1 Nearest datapoint is Doc no. 1 at distance 0.0 (which is that same datapoint)\n",
+      "Second nearest datapoint is Doc no. 4 at distance 4.0\n",
+      "\n",
+      "\n",
+      "For Doc 2 Nearest datapoint is Doc no. 2 at distance 0.0 (which is that same datapoint)\n",
+      "Second nearest datapoint is Doc no. 5 at distance 6.0\n",
+      "\n",
+      "\n",
+      "For Doc 3 Nearest datapoint is Doc no. 3 at distance 0.0 (which is that same datapoint)\n",
+      "Second nearest datapoint is Doc no. 1 at distance 6.0\n",
+      "\n",
+      "\n",
+      "For Doc 4 Nearest datapoint is Doc no. 4 at distance 0.0 (which is that same datapoint)\n",
+      "Second nearest datapoint is Doc no. 1 at distance 4.0\n",
+      "\n",
+      "\n",
+      "For Doc 5 Nearest datapoint is Doc no. 5 at distance 0.0 (which is that same datapoint)\n",
+      "Second nearest datapoint is Doc no. 4 at distance 4.0\n",
+      "\n",
+      "\n",
+      "For Doc 6 Nearest datapoint is Doc no. 6 at distance 0.0 (which is that same datapoint)\n",
+      "Second nearest datapoint is Doc no. 1 at distance 4.0\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# space for your code here"
+    "# space for your code here\n",
+    "\n",
+    "doc_dict = {1: [\"baseball\", \"startups\", \"college\", \"soccer\"], 2: [\"opera\", \"training\", \"opera\", \"training\"], 3: [\"soccer\", \"tech\", \"AI\", \"robots\"], 4: [\"sculpture\", \"college\", \"AI\", \"baseball\"], 5: [\"AI\", \"exhibition\", \"college\", \"opera\"], 6: [\"startups\", \"training\", \"sculpture\", \"college\"]}\n",
+    "\n",
+    "docs = []\n",
+    "\n",
+    "keywords = []\n",
+    "\n",
+    "for key, values in doc_dict.items():\n",
+    "    if key not in docs:\n",
+    "        docs.append(key)\n",
+    "    \n",
+    "    for val in values:\n",
+    "        if val not in keywords:\n",
+    "            keywords.append(val)\n",
+    "\n",
+    "dict = {key: {key: 0 for key in keywords} for key in docs}\n",
+    "\n",
+    "for i in range(1, 7):\n",
+    "    for val in keywords:\n",
+    "        for j in range(len(doc_dict[i])):\n",
+    "            if val == doc_dict[i][j]:\n",
+    "                dict[i][val] += 1\n",
+    "\n",
+    "data = []\n",
+    "\n",
+    "for key1, values in dict.items():\n",
+    "    lst = []\n",
+    "    for key, value in values.items():\n",
+    "        lst.append(value)\n",
+    "    \n",
+    "    data.append(lst)\n",
+    "\n",
+    "neighbor_obj = NearestNeighbors(n_neighbors=2, metric='cityblock')\n",
+    "neighbor_obj.fit(data)\n",
+    "\n",
+    "for i in range(len(docs)):\n",
+    "    \n",
+    "    distances, neighbors = neighbor_obj.kneighbors(data)\n",
+    "\n",
+    "    print(\"For Doc {} Nearest datapoint is Doc no.\".format(i + 1), (neighbors[i][0] + 1), \"at distance\", distances[i][0], \"(which is that same datapoint)\")\n",
+    "    print(\"Second nearest datapoint is Doc no.\", (neighbors[i][1] + 1), \"at distance\", distances[i][1])\n",
+    "    print(\"\\n\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.9.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -566,11 +773,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.5"
   },
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "1c490f81440cd97bfeee60915f4989b9d097711056e0f4f25d0cf94e2d493cda"
    }
   }
  },
