--- a/Homework/Introcl_homework_3.ipynb
+++ b/Homework/Introcl_homework_3.ipynb
@@ -10,8 +10,8 @@
     "\n",
     "## Due: Wednesday October 5, 3pm right before class\n",
     "\n",
-    "## Your name:\n",
-    "## Your EID:\n",
+    "## Your name: Eloragh Espie\n",
+    "## Your EID: eae2273\n",
     "\n",
     "This homework comes with the following files:\n",
     "\n",
@@ -151,11 +151,17 @@
    "source": [
     "*(Click here to insert your text answer)*\n",
     "\n",
-    "1 is B\n",
+    "1 is B.\n",
+    "\n",
+    "* 1 specifies that \"the first complete sentence you hear is...\", meaning that the sentence will need START and END identifiers and B is the only expression that includes both of those.\n",
     "\n",
     "2 is A\n",
     "\n",
-    "3 is C"
+    "* Unlike 1 and 3, 2 doesn't provide any information regarding where these words fit into the sentence so it's safe to assume that neither the START nor END identifiers are necessary for the expression.\n",
+    "\n",
+    "3 is C\n",
+    "\n",
+    "* 3 is similar to 1 but it qualifies the statement with \"the first complete sentence you hear ***starts*** with...\" meaning that this sentence will need a START identifier but not necessarily an END identifier, which would match C."
    ]
   },
   {
@@ -759,7 +765,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -773,11 +779,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "1c490f81440cd97bfeee60915f4989b9d097711056e0f4f25d0cf94e2d493cda"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
